<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="plumin">+/-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="four">4</string>
    <string name="ex">x</string>
    <string name="five">5</string>
    <string name="dash">/</string>
    <string name="one">1</string>
    <string name="eight">8</string>
    <string name="siz">6</string>
    <string name="nine">9</string>
    <string name="two">2</string>
    <string name="line">-</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="seven">7</string>
    <string name="perc">%</string>
    <string name="zerroo">0</string>
</resources>
