<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/viewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="right"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/zerroo"
        android:textColor="#FFFFFF"
        android:textSize="80sp" />

    <TableLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buAC"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:singleLine="false"
                android:text="@string/ac"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buPlMi"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:text="@string/plumin"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buPerc"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:text="@string/perc"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buDiv"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/or"
                android:text="@string/dash"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu7"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/seven"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu8"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/eight"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu9"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/nine"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buX"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/or"
                android:text="@string/ex"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu4"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/four"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu5"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/five"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu6"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/siz"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buMinus"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/or"
                android:text="@string/line"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu1"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/one"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu2"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/two"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bu3"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/ggray"
                android:onClick="buEvnt"
                android:text="@string/three"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buPlus"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/or"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bu0"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/ggray"
            android:onClick="buEvnt"
            android:text="@string/zero"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buDot"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="@color/ggray"
            android:onClick="buEvnt"
            android:text="@string/dot"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buEqual"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="@color/or"
            android:text="@string/equal"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

    </LinearLayout>

</LinearLayout>